# atlas-os

./: .design-approved.json  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .supabase-write-approved  BUILD-COORDINATION.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  alembic.ini  calls-snapshot.md  decisions.jsonl  etfs-list-snapshot.md  india-pulse-snapshot.md  pyproject.toml
.github/workflows/: ci.yml  deploy-frontend.yml
atlas/: __init__.py  config.py  db.py  preflight.py  primitives.py  universes.py
atlas/agents/: __init__.py
atlas/api/: __init__.py  _rule_allowlist.py  agents.py  auth.py  cell_defs.py  cts_brief.py  cts_sectors.py  fund_decisions.py  instrument.py  internal_recompute.py  intraday.py  kite_auth.py  market.py  portfolios.py  rank.py  screen.py  strategies.py  trading.py  tv_signals.py
atlas/compute/: __init__.py  _policy.py  _session.py  benchmarks.py  breadth.py  decisions_etf.py  decisions_fund.py  decisions_stock.py  etfs.py  funds.py  gates.py  global_pipeline.py  indices.py  lens_composition.py  lens_decisions.py  lens_holdings.py  lens_nav.py  primitives.py  regime.py  sectors.py  states.py  stocks.py  us_stocks.py
atlas/data_prereqs/: __init__.py
atlas/decisions/: __init__.py  cron.py  evaluator.py  rule_dsl.py
atlas/desk/: __init__.py  prompts.py
atlas/discovery/: __init__.py  _sector_panels.py  cli.py  deep_search.py  deep_search_candidates.py  deep_search_features.py  deep_search_report.py  engine.py  matrix_status.py  persist_cells.py
atlas/drift/: __init__.py  compute_drift.py
atlas/features/: __init__.py  path.py  scorecard_writer.py  sector.py  trend.py  volatility.py  volume.py
atlas/health/: __init__.py  anomaly.py  freshness.py  metrics.py  runs.py  validator_runner.py
atlas/inference/: __init__.py  cli.py  conviction_tape.py  daily.py  eli5.py  eli5_fund_etf.py  etf_scorecard.py  fund_scorecard.py
atlas/ingest/: __init__.py
atlas/intelligence/: __init__.py  ranking.py
atlas/intraday/: __init__.py  auth.py  ema_engine.py  ingester.py  notify.py  persistence.py  rs_engine.py  sector_rs.py
atlas/lenses/: __init__.py  calibration.py  pipeline.py
atlas/portfolio/: __init__.py  engine.py  tax.py
atlas/regime/: __init__.py  classifier.py  cron.py
atlas/research/: __init__.py
atlas/signals/: models.py  narrative.py  processor.py  provisioner.py  screenshot.py  technical.py
atlas/trading/: __init__.py  cli.py  cli_states.py  config.py  data_loader.py  decision.py  evolver.py  genome.py  goal_post.py  incubator.py  insight.py  lab.py  optimizer.py  perception.py  period_engine.py  simulator.py  tax_engine.py  tournament.py  universe.py
atlas/tv/: __init__.py  csv_export.py  peer_matrix.py  portfolio_analytics.py  routes.py  rs_ratios.py  screener.py
atlas/universe/: __init__.py  benchmarks.py  etfs.py  funds.py  indices.py  lock.py  sectors.py  stocks.py  thresholds.py
atlas/validation/: __init__.py  m1_data_quality.py  samplers.py  tier2_metrics.py  tier3_states.py  tier4_consistency.py
atlas/verdict/: __init__.py  derive.py
ci/: pyright-baseline.json
ci/fixtures/: README.md  external_de_tables.sql  slim_de_dump.py
docs/: 00_METHODOLOGY_LOCK.md  01_BACKEND_ARCHITECTURE.md  02_DATABASE_SCHEMA.md  03_VALIDATION_FRAMEWORK.md  04_THRESHOLD_CATALOG.md  06_DEVELOPMENT_PLAN.md  atlas-data-foundation-report.md  atlas-data-foundation.md  atlas-ic-and-step-goals.md  atlas-six-lens-coverage-map.md  atlas-six-lens-data-spec.md  atlas-v4-blueprint.html  atlas-v4-blueprint.md  deploy-hygiene.md  deploy.md  desk-v2-waves.md  disaster-recovery.md  engineering-process.md  health-audit-rules.md  markets-today-redesign.md  refresh-schedule.md  repo-structure.md  v6-morning-briefing-2026-05-19.md  wealth-capability-atlas.md  wealth-recommendation-framework.md  wealth-seven-prompts-framework.md  wealth-transactions-build-plan.md  wealth-transactions-roadmap.md
docs/adr/: 0001-large-tier-rs-anchor-nifty50.md  0002-rs-relative-form-and-gold-numeraire.md
docs/agents/: domain.md  issue-tracker.md  supabase-mcp.md  triage-labels.md
docs/audits/: 2026-05-21-backend-completeness-audit.md  2026-05-breakout-ratio-ic-validation.md  2026-05-stage2-softband-revalidation.md  2026-05-stage2-state-revalidation.md  2026-05-stage2-threshold-audit.md  aggregator-schema-discovery-2026-05.md  ec2-uncommitted-diff-2026-05-21.diff  state-engine-phase2-ic-2026-05.md  v2-demo-handoff-2026-05-19.md  v2-honest-handoff-2026-05-19.md
docs/chunks/: chunk-094-replay-migration-approach.md  chunk-096-backfill-approach.md  (+153 more)
frontend/: .env.local.example  .eslintrc.json  .gitignore  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
migrations/: env.py
prds/: 00_INFRA_DECISIONS.md  M13_THRESHOLDS_ADMIN.md  M14_DECISION_POLICY.md  M15_SIMULATION_FRONTEND.md  M1_DATA_CORE_INVENTORY.md  M2_BUILD_PLAN.md
scripts/: aggregate_deep_search_v2.py  amfi_etf_inav_ingest.py  amfi_history_backfill.py  amfi_nav_backfill.py  amfi_nav_backfill_direct.py  atlas_compute_adjustments.py  atlas_health_check.py  backfill_breadth_ema_4wh.py  backfill_conviction_tape.py  backfill_cts_bulk.py  backfill_cts_signals.py  backfill_etf_isin_from_nse.py  backfill_fwd_returns_bulk.py  backfill_m3_rs.py  check_weight_drift.py  compare_v2_v3.py  compute_conviction.py  compute_cts_hit_rates.py  compute_cts_signals.py  compute_hit_rates.py  compute_timing_ic.py  crawl_frontend.py  deploy_frontend.sh  deploy_frontend_v6.sh  deploy_v2.sh  enrich_fund_decision_outcomes.py  etf_scorecard_expand.py  etf_sector_backfill.py  export_index_ohlcv.py  fetch_fund_aum.py  generate_cts_param_candidates.py  generate_daily_brief.py  generate_weight_candidates.py  global_backfill.py  global_daily.py  health_check_daily.py  jip_incremental_sync.py  kite_autologin.py  kite_daily_notify.py  kite_relay_login.py  (+72 more)
systemd/: atlas-intraday-notify.service  atlas-intraday-notify.timer  atlas-intraday.service  atlas-intraday.timer
tests/: conftest.py
(+2837 files in other folders)
