[project]
name = "atlas-os"
version = "0.1.0"
description = "Atlas — Adaptive Technical Lens for Asset States. Indian wealth-management decision engine."
# 3.12+ required: pandas-ta 0.4.71b0 (core dep) needs Py>=3.12, and EC2 runs
# 3.12. The stale >=3.11 made uv/venv resolution fail (3.11 can't install
# pandas-ta), which blocked running alembic/pytest/hooks locally.
requires-python = ">=3.12"
dependencies = [
    # Compute (per architecture 5.1)
    # pandas-ta bumped 0.3.14b0 → 0.4.71b0 (Py 3.12 + NumPy 2 compat).
    # empyrical 0.5.5 (Quantopian) is dead on Py 3.12 — uses removed
    # configparser.SafeConfigParser. Swapped to empyrical-reloaded which is
    # the maintained fork: same module name `import empyrical`, same API.
    # See prds/M2_BUILD_PLAN.md §1 R1.
    "polars>=0.20,<2.0",
    "pandas>=2.1",
    "pandas-ta==0.4.71b0",
    "empyrical-reloaded>=0.5.10",
    "scipy>=1.11",
    "numpy>=1.26",

    # Database (per architecture 2.4)
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.13",

    # Config + serialization
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",

    # Logging
    "structlog>=24.0",

    # TradingView screener (TV integration). Pin <3.0 — v3 dropped the
    # Scanner class that atlas/tv/screener.py imports; codebase uses the
    # v0/v1/v2 API (Scanner.get_scanner_data) until we migrate to the
    # new Query API.
    "tradingview-screener>=0.14.0,<3.0",

    # Serving (FastAPI thin layer per architecture 10.1; UI is Streamlit)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    # External data sources used during M0 gap-fill / M1 reference checks
    "yfinance>=0.2",
    "requests>=2.31",

    # Notification (per architecture 7.4)
    "httpx>=0.26",

    # Auth — Supabase JWT verification (HS256)
    "pyjwt>=2.8",

    # SP08 — KiteConnect WebSocket intraday feed
    "kiteconnect>=5.0",

    # SP08 — Telegram daily OAuth reminder
    "python-telegram-bot>=20.0",

    # E2 brief generator (#47) — application-layer SQL parse for the
    # atlas_agent_readonly defense-in-depth allowlist check.
    "sqlparse>=0.4",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "pyright>=1.1",
    "ipython>=8.0",
]

simulation = [
    "vectorbt>=0.26",
    "PyPortfolioOpt>=1.5",
]

intelligence = [
    "alphalens-reloaded>=0.4.5",
    "statsmodels>=0.14",
    # SP05 — Groq Llama-3.3-70B daily brief generation (OpenAI-compatible API)
    "openai>=1.50",
    # Keep anthropic for potential future swap back
    "anthropic>=0.40",
]

optimizer = [
    "optuna[postgres]>=3.0",
    "deap>=1.4",
]

crawler = [
    # Phase C route crawler — install on EC2 before running crawl_frontend.py
    "playwright>=1.40",
]

ui = [
    "streamlit>=1.32",
    "plotly>=5.18",
    "altair>=5.2",
]

[project.scripts]
atlas-lab = "atlas.trading.cli:main"
atlas-inference = "atlas.inference.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["atlas*"]
exclude = ["tests*", "scripts*", "docs*", "migrations*", "src*"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".venv",
    "src/atlas_os",     # legacy M0-inventory module — preserved as-is
    "migrations/versions",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF", "S"]
ignore = [
    "S101",   # assert allowed in tests + DoD checks
    "S110",   # try-except-pass used for defensive connection cleanup
    "S112",   # try-except-continue used for defensive per-item skips in batch loops
    "S314",   # ElementTree on FIRST-PARTY trusted feeds (Morningstar/AMFI), not user input
    "S108",   # /tmp paths in dev/ops scripts are intentional scratch
    "E741",   # ambiguous single-letter names (l, I, O) are idiomatic in quant code (RS, IC, …)
    "E731",   # assigning a lambda to a local is fine for tight inline helpers
    "N802",   # function names may use domain casing (RSI, EMA, …) in the analytics layer
    "N806",   # local variable casing (X, IC, RS) follows finance/maths convention
    "N812",   # import aliases may keep upstream casing
    "RUF001", # mathematical unicode (σ) in string literals is intentional
    "RUF002", # mathematical unicode (×, −, σ, –) in docstrings is intentional
    "RUF003", # mathematical unicode (×) in comments is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "N802", "S603"]  # N802: uppercase verdict labels (BUY/SELL); S603: CLI smoke tests subprocess the project's own binary, no untrusted input
# S608/S607: internal data-eng + ops scripts build SQL from code constants and
# call known binaries; query values are bound, never user input.
"scripts/**" = ["S101", "E501", "S608", "S607"]
"migrations/**" = ["E501"]  # SQL string literals in migrations have long lines by nature
"atlas/validation/m1_data_quality.py" = ["E501"]
"atlas/preflight.py" = ["E501"]
"atlas/trading/genome.py" = ["S311"]  # non-crypto RNG OK for genome seeding
# S608 below: SQL assembled via f-strings from CODE CONSTANTS (static clause
# fragments / table+column names); every user value is bound via :param. Verified
# not an injection vector. S608 stays ON for new files so each is reviewed once.
"atlas/agents/tools/atlas_queries.py" = ["S608"]
"atlas/api/admin/validator.py" = ["S608"]
"atlas/api/fund_decisions.py" = ["S608"]
"atlas/compute/lens_composition.py" = ["S608"]
"atlas/intelligence/conviction/composer.py" = ["S608"]
"atlas/intelligence/validation/state_validator.py" = ["S608"]
"atlas/simulation/core/paper_trader.py" = ["S608"]
"atlas/simulation/core/signal_adapter.py" = ["S608"]
# incubator: pickles its OWN strategy-genome cache (not untrusted data), uses a
# fixed scratch dir, and a bounded retry loop that intentionally continues.
"atlas/trading/incubator.py" = ["S301", "S108", "S112"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
include = ["atlas", "tests", "scripts"]
exclude = [".venv", "src/atlas_os", "migrations/versions"]
extraPaths = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast, no I/O",
    "integration: requires database",
    "validation: tier 2/3/4 hand-validation checks",
]
